objects/s4g_currencies__LogCurrency__c.object
<CustomObject>
    <fields>
        <fullName>s4g_currencies__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>s4g_currencies__Logs__c</fullName>
        <label>Logs</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>s4g_currencies__Status__c</fullName>
        <label>Status</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Log Currency Updater</label>
    <listViews>
        <fullName>s4g_currencies__All_Logs</fullName>
        <columns>NAME</columns>
        <columns>s4g_currencies__Date__c</columns>
        <columns>s4g_currencies__Status__c</columns>
        <columns>s4g_currencies__Logs__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Logs</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs Currency Updater</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>